--- a/index.html
+++ b/index.html
@@ -19,8 +19,16 @@
         </div>
         <h1>Вхід</h1>
         <div class="form">
-            <input type="text">
-            <input type="password">
+            <input  class="Sign email" type="text" placeholder="Введіть ваш e-mail">
+            <input  class="sign password" type="password" placeholder="Введіть ваш пароль">
+        </div>
+        <div class="ButtomPanel">
+            <div class="remember">
+                <input class="inputRemember" type="checkbox">
+                <p class="nameRemember">Запам'ятати мене</p>
+            </div>
+            <a  class="Link" href="#">Забув пароль?</a>
+            <button class="vhid">Ввійти</button>
         </div>
     </div>
 </body>
