--- a/index.html
+++ b/index.html
@@ -28,8 +28,19 @@
                 <p class="nameRemember">Запам'ятати мене</p>
             </div>
             <a  class="Link" href="#">Забув пароль?</a>
-            <button class="vhid">Ввійти</button>
-        </div>
-    </div>
-</body>
+            <button class="vhid">Вхід</button>
+            <div class="registration">
+                <p class="question">Ще немає акаента?</p>
+                <a  class="url" href="#"> Зареєструватися</a>
+            </div>
+            
+            <div class="or">
+                <p class="alternative">Або війдіть через</p>
+                <div>
+                    <img  class="social" src="./Vector.png" >
+                    <img  class="social inst" src="./Vector (1).png" >
+                    <img  class="social inst" src="" >
+                </div>
+                <img  class="social" src="./Vector.png" >
+                <img  class="social inst" src="./Vector (1).png" >
 </html>
