--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>Вхід</h1>
         <div class="form">
             <input  class="Sign email" type="text" placeholder="Введіть ваш e-mail">
-            <input  class="sign password" type="password" placeholder="Введіть ваш пароль">
+            <input  class="Sign password" type="password" placeholder="Введіть ваш пароль">
         </div>
         <div class="ButtomPanel">
             <div class="remember">
@@ -36,11 +36,9 @@
             
             <div class="or">
                 <p class="alternative">Або війдіть через</p>
-                <div>
+                <div class="social">
                     <img  class="social" src="./Vector.png" >
                     <img  class="social inst" src="./Vector (1).png" >
-                    <img  class="social inst" src="" >
+                    <img  class="social inst" src="./Vector (2).png" >
                 </div>
-                <img  class="social" src="./Vector.png" >
-                <img  class="social inst" src="./Vector (1).png" >
 </html>
